@@ -5,6 +5,8 @@
 * General XEmbed support in editor: Emacs works.
 * Signatures: Include per-account signatures (either included or
   attached).
+* Saved searches: Save a search with 'C-S', then browse saved searches
+  and stats with 'C-f'.
 * All actions requiring write-access run in the background and wait for
   any reads to finish. All read operations need to wait for any ongoing
   write-operations to finish. All write-operations are therefore
